# embedded_project

./: README.md
Final/: .gitignore
Final/.github/workflows/: ci.yml
Final/include/: aiopponent.h  database.h  gamelogic.h  mainwindow.h  user.h
Final/resources/styles/: main.qss
Final/src/: gamelogic.cpp  mainwindow.cpp  user.cpp
Final/tests/: test_database.cpp
ProfessionalTicTacToe/: CMakeLists.txt
ProfessionalTicTacToe-not_completed/: CMakeLists.txt  README.md  database.h  gamehistory.h  gamelogic.h  main.cpp  mainwindow.cpp  mainwindow.h
ProfessionalTicTacToe-not_completed/include/: aiopponent.h  authentication.h  database.h  gamehistory.h  gamelogic.h  mainwindow.h  user.h
ProfessionalTicTacToe-not_completed/resources/: resources.qrc
ProfessionalTicTacToe-not_completed/resources/styles/: main.qss
ProfessionalTicTacToe-not_completed/src/: aiopponent.cpp  authentication.cpp  database.cpp  gamehistory.cpp  gamelogic.cpp  main.cpp  mainwindow.cpp
ProfessionalTicTacToe-not_completed_10th_version/: CMakeLists.txt  README.md
ProfessionalTicTacToe-not_completed_10th_version/.github/workflows/: ci.yml
ProfessionalTicTacToe-not_completed_10th_version/include/: gamelogic.h
ProfessionalTicTacToe-not_completed_10th_version/src/: gamelogic.cpp
ProfessionalTicTacToe-not_completed_10th_version/tests/: test_aiopponent.cpp  test_authentication.cpp  test_gamelogic.cpp
ProfessionalTicTacToe-not_completed_12th_version/: CMakeLists.txt
ProfessionalTicTacToe-not_completed_12th_version/include/: authentication.h  gamehistory.h  gamelogic.h
ProfessionalTicTacToe-not_completed_12th_version/src/: aiopponent.cpp  authentication.cpp  database.cpp  gamelogic.cpp  user.cpp
ProfessionalTicTacToe-not_completed_12th_version/tests/: test_authentication.cpp  test_gamelogic.cpp  test_integration.cpp  test_performance.cpp  test_user.cpp
ProfessionalTicTacToe-not_completed_2nd_version/: test_compile.cpp
ProfessionalTicTacToe-not_completed_2nd_version/include/: aiopponent.h  database.h  gamelogic.h  mainwindow.h
ProfessionalTicTacToe-not_completed_2nd_version/resources/styles/: main.qss
ProfessionalTicTacToe-not_completed_2nd_version/src/: authentication.cpp  database.cpp  gamehistory.cpp  gamelogic.cpp  mainwindow.cpp  user.cpp
ProfessionalTicTacToe-not_completed_3rd_version/: CMakeLists.txt
ProfessionalTicTacToe-not_completed_3rd_version/include/: authentication.h  user.h
ProfessionalTicTacToe-not_completed_3rd_version/src/: aiopponent.cpp  authentication.cpp
ProfessionalTicTacToe-not_completed_4rd_version/include/: database.h
ProfessionalTicTacToe-not_completed_4rd_version/src/: authentication.cpp  main.cpp
ProfessionalTicTacToe-not_completed_5th_version/include/: authentication.h  user.h
ProfessionalTicTacToe-not_completed_5th_version/src/: aiopponent.cpp
ProfessionalTicTacToe-not_completed_6th_version/resources/: resources.qrc
ProfessionalTicTacToe-not_completed_6th_version/resources/styles/: main.qss
ProfessionalTicTacToe-not_completed_6th_version/src/: aiopponent.cpp
ProfessionalTicTacToe-not_completed_7th_version/: CMakeLists.txt
ProfessionalTicTacToe-not_completed_7th_version/include/: gamelogic.h
ProfessionalTicTacToe-not_completed_7th_version/src/: authentication.cpp  gamelogic.cpp  main.cpp  user.cpp
ProfessionalTicTacToe-not_completed_7th_version/tests/: CMakeLists.cmake  test_aiopponent.cpp  test_authentication.cpp  test_database.cpp  test_gamelogic.cpp  test_integration.cpp  test_user.cpp
ProfessionalTicTacToe-not_completed_8th_version/: CMakeLists.txt
ProfessionalTicTacToe-not_completed_8th_version/include/: aiopponent.h  mainwindow.h
ProfessionalTicTacToe-not_completed_8th_version/src/: database.cpp  mainwindow.cpp
ProfessionalTicTacToe-not_completed_8th_version/tests/: test_aiopponent.cpp  test_authentication.cpp  test_database.cpp  test_gamelogic.cpp  test_user.cpp
ProfessionalTicTacToe/include/: authentication.h
ProfessionalTicTacToe/resources/: resources.qrc
ProfessionalTicTacToe/resources/styles/: main.qss
ProfessionalTicTacToe/src/: aiopponent.cpp  authentication.cpp  database.cpp  gamehistory.cpp  gamelogic.cpp  user.cpp
test_no_1/: CMakeLists.txt  advancedtictactoe.cpp  advancedtictactoe.h  advancedtictactoe.ui  main.cpp
tic_tac_toe_frist_draft/: CMakeLists.txt  main.cpp
